# sonarqube-issue-conversion

./: .devcontainer.json  .gitignore  .mega-linter.yml  .release-please-manifest.json  CHANGELOG.md  LICENSE  README.md  action.yml  issue-converter.py  release-please-config.json  requirements.txt
.devcontainer/: devcontainer.json
.github/: CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  SECURITY.md  dependabot.yml
.github/workflows/: ci.yml  issue-cleanup.yml  linting-formatting.yml  pr-conventional-title.yml  pr-report.yml  release-please.yml  release-published.yml  social-interaction.yml
converters/: gtest-to-generic-execution.xslt  mutation-elements-to-generic-issue.jq  xsltproc  xsltproc.py
test/gtest-to-generic-execution/: CMakeLists.txt  CMakePresets.json  CalculatorTest.cpp  expected-gtest-generic-execution-Linux.xml  expected-gtest-generic-execution-Windows.xml  expected-gtest-generic-execution-container.xml  expected-gtest-generic-execution-macOS.xml  expected-gtest-generic-execution.xml  test.cpp
